# auraloss

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: codeql-analysis.yml  publish-to-test-pypi.yml  pytest.yml  tests.yml
auraloss/: __init__.py  freq.py  mrstft.py  perceptual.py  ratio.py  time.py  utils.py
auraloss/experimental/: loss.py  transforms.py
auraloss/freq/: mrstft.py  stft.py  sumdiff.py
auraloss/time/: fir.py
auraloss/utils/: plotting.py
examples/: auraloss.ipynb  data.py  tcn.py  test_comp.py  train.sh  train_comp.py  train_denoise.py
examples/compressor/: README.md  _test_comp.py  comp-metrics.json  data.py  tcn.py  test.sh  test_comp.py  train.sh  train_comp.py
examples/speech-denoise/: data.py  train_denoise.py
tests/: adv_test.py  data.py  extras_test.py  manual_test_gpu.py  simple_test.py  simple_train_gpu.py  stft_test.py  test_auraloss.py  test_jtfs.py  test_nn.py
