[project]
name = "auraloss"
version = "0.3.0"
description = "Collection of audio-focused loss functions in PyTorch."
authors = [
    { name = "Christian Steinmetz" },
    { email = "c.j.steinmetz@qmul.ac.uk" },
]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["torch", "scipy", "numpy", "librosa", "matplotlib"]
